add iframes, nav button, header font

--- a/index.html
+++ b/index.html
@@ -51,30 +51,10 @@
     <div class="border-bottom bg-right border border-angle">
     </div>
     <div class="container">
-      <!-- <div class="nav">
-        <nav class="navbar navbar-inverse">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-
-                <i class="fa fa-bars" aria-hidden="true"></i>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div> -->
       <a id="top"></a>
       <div class="header">
-
-        <h1 class="moon">Concrete / Mutant / Metallic / Beat / TapeHiss / Acidic / BrainWave / Electroid / Technical / Experimentation</h1>
+        <h4 class="moon">Concrete / Mutant / Metallic / Beat / TapeHiss / Acidic / BrainWave / Electroid / Technical / Experimentation</h4>
+        <!--carousel-->
         <div id="carouselExampleIndicators" class="carousel slide" data-interval="10000" data-pause="hover" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
@@ -110,14 +90,17 @@
         <div class="column-4">
           <img src="img/episode-images/episode-01.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 1</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-001-462016-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-02.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 2</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2F002-4132016-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-03.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 3</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-008-612016-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
       </div> <!--grid-->
 
@@ -125,14 +108,17 @@
         <div class="column-4">
           <img src="img/episode-images/episode-04.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 4</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-015-7272016-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-05.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 5</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-030-w-sappho-12072016-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-06.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 6</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-035-w-ben-tactic-0212017-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
       </div> <!--grid-->
 
@@ -140,14 +126,17 @@
         <div class="column-4">
           <img src="img/episode-images/episode-07.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 7</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-039-w-daniel-edward-xnor-04122017-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-08.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 8</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-041-w-sky-madden-05102017-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
         <div class="column-4">
           <img src="img/episode-images/episode-09.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 9</p>
+          <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2FAlleysOfYourMindPDX%2Falleys-of-your-mind-049-w-steve-summers-09132017-freeform-portland%2F" frameborder="0" ></iframe>
         </div>
       </div> <!--grid-->
 
