--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
     </div>
     <div class="bg-left border border-angle border-top">
+      <img class="main-logo" src="img/logo/aoym.png" alt="logo">
     </div>
     <div class="bg-right border border-angle border-top">
       <div class="nav">
@@ -49,11 +50,14 @@
     <div class="border-bottom bg-left border border-angle">
     </div>
     <div class="border-bottom bg-right border border-angle">
+      <div class="scrollTop">
+        SCROLL
+      </div>
     </div>
     <div class="container">
       <a id="top"></a>
       <div class="header">
-        <h4 class="moon">Concrete / Mutant / Metallic / Beat / TapeHiss / Acidic / BrainWave / Electroid / Technical / Experimentation</h4>
+          <h4 class="moon">Concrete / Mutant / Metallic / Beat / TapeHiss / Acidic / BrainWave / Electroid / Technical / Experimentation</h4>
         <!--carousel-->
         <div id="carouselExampleIndicators" class="carousel slide" data-interval="10000" data-pause="hover" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
@@ -86,7 +90,7 @@
       </div> <!--header-->
 
 
-      <div class="grid">
+      <div class="grid ">
         <div class="column-4">
           <img src="img/episode-images/episode-01.jpg" alt="" class="episode-cover">
           <p class="moon">Episode 1</p>
@@ -140,10 +144,6 @@
         </div>
       </div> <!--grid-->
 
-      <a href="#top" class="scrollTop">SCROLL!</a>
-      <div class="footer">
-        footer
-      </div>
     </div>
   </body>
 </html>
